--- a/Semestralka/Semestralka.vcxproj.filters
+++ b/Semestralka/Semestralka.vcxproj.filters
@@ -34,5 +34,8 @@
     <ClInclude Include="Filter.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="FilteringOptions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
