--- a/Semestralka/Semestralka.vcxproj.filters
+++ b/Semestralka/Semestralka.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="RoutingTableHierarchy.h">
       <Filter>Header Files</Filter>
     </ClCompile>
+    <ClCompile Include="Cast1Main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="RT.csv">
