cast 3 sorted table

--- a/Semestralka/Semestralka.vcxproj
+++ b/Semestralka/Semestralka.vcxproj
@@ -142,6 +142,7 @@
     <ClInclude Include="FilteringOptions.h" />
     <ClInclude Include="Parser.h" />
     <ClInclude Include="RoutingRecord.h" />
+    <ClInclude Include="SortedTable.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
