--- a/Semestralka/Semestralka.vcxproj.filters
+++ b/Semestralka/Semestralka.vcxproj.filters
@@ -40,5 +40,8 @@
     <ClInclude Include="FilteringOptions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SortedTable.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
