--- a/Semestralka/Semestralka.vcxproj.filters
+++ b/Semestralka/Semestralka.vcxproj.filters
@@ -43,5 +43,8 @@
     <ClInclude Include="SortedTable.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="VectorQuickSort.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
