--- a/Semestralka/Semestralka.vcxproj.filters
+++ b/Semestralka/Semestralka.vcxproj.filters
@@ -26,6 +26,7 @@
     <None Include="RT.csv">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="ClassDiagram.cd" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="RoutingRecord.h">
